11/06/2021
- added public functions that allow tokens to be revoked without
  destroying the current session; see #402; thanks to
  @thorstenfleischmann

09/23/2021
- if lifecyle handlers return truthy values they cause the operation
  they are handlers of to fail; see #384; thanks to @arcivanov

- added opts.cache_segment as option to shard the cache used by token
  introspection or JWT verification; see #399

09/22/2021
- made jwt_verify() and bearer_jwt_verify() use a separate cache named
  "jwt_verification" and introduced opts.jwt_verification_cache_ignore
  to disable caching completely; see #399

12/05/2020
- fixed a session leak in access_token() and for a very unlikely
  code-path in authenticate(); authenticate will still normally not
  close the session as users may want to use it after the method
  returns; see
  https://github.com/zmartzone/lua-resty-openidc#sessions-and-locking
  see #374

11/17/2020
- changed dependency on lua-resty-jwt to allow newer versions in
  luarocks packaging; see #363, #366, #362;
  thanks to @Darguelles and @kayano
- release 1.7.4

09/20/2020
- release 1.7.3

08/20/2020
- added optional support for RFC 7636 "Proof Key for Code Exchange"

04/08/2020
- openidc.call_userinfo_endpoint will now invoke the discovery
  endpoint if this has not been done before in order to detect the URI
  of the userinfo endpoint

02/06/2020
- ability to disable keepalive from lua-resty-http
  By disabling keepalive we disable the native connection pool,
  avoiding errors when dealing with invalid connections. This is
  specially useful when proxying ajax requests.

02/05/2020
- no longer echo the URI parameters back on default error page when
  OIDC provider returns an error in call to redirect_uri; see #306;
  thanks @barrelmaker97

10/02/2019
- when unauth_action is 'pass' and a token refresh fails the session
  will get marked as no longer authenticated and a proper error is
  returned; see #286; thanks @cretzel

07/15/2019
- release 1.7.2
