@@ -3,6 +3,9 @@
   destroying the current session; see #402; thanks to
   @thorstenfleischmann
 
+- when the x5c claim of a JWK is an empty array it will be ignored
+  rather than cause an error; see #406
+
 09/23/2021
 - if lifecyle handlers return truthy values they cause the operation
   they are handlers of to fail; see #384; thanks to @arcivanov
